<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="F E V E R"
        android:textColor="#ee1d24"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Fever: "
        android:textColor="#17479e"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/fever"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Types"
        android:textColor="#17479e"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/types"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Common Causes:"
        android:textColor="#17479e"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/common_causes"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="normal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Other causes:"
        android:textColor="#17479e"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/other_causes"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="normal" />
</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:text="11"
        android:textColor="#808080"
        android:textSize="15sp"
        android:textStyle="bold"
        />
</FrameLayout>