<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Neuroleptic malignant syndrome"
            android:textColor="#17479e"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/neuroleptic"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Malignant hyperthermia"
            android:textColor="#17479e"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/malignant"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="A- Effects on the organisms"
            android:textColor="#17479e"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1- Bacteria:"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/bacteria"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="2- Viruses:"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/viruses"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B- Effect on the host defense mechanisms:"
            android:textColor="#17479e"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:text="Fever is the nature’s engine which she brings to the field to kill
her enemy
"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:text="13"
        android:textColor="#808080"
        android:textSize="15sp"
        android:textStyle="bold"
        />
</FrameLayout>